--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -1,5 +1,23 @@
 {
   "files": [
+    "dandisets/000673/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.json",
+    "dandisets/000673/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.txt",
+    "dandisets/000673/2025-04-15-claude-3.7-sonnet-prompt-a-3/summary_critique.txt",
+    "dandisets/000673/2025-04-15-claude-3.7-sonnet-prompt-b-3/cells_critique.json",
+    "dandisets/000673/2025-04-15-claude-3.7-sonnet-prompt-b-3/cells_critique.txt",
+    "dandisets/000673/2025-04-15-claude-3.7-sonnet-prompt-b-3/summary_critique.txt",
+    "dandisets/000673/2025-04-15-gemini-2.0-flash-001-prompt-a-3/cells_critique.json",
+    "dandisets/000673/2025-04-15-gemini-2.0-flash-001-prompt-a-3/cells_critique.txt",
+    "dandisets/000673/2025-04-15-gemini-2.0-flash-001-prompt-a-3/summary_critique.txt",
+    "dandisets/000673/2025-04-15-gemini-2.0-flash-001-prompt-b-3/cells_critique.json",
+    "dandisets/000673/2025-04-15-gemini-2.0-flash-001-prompt-b-3/cells_critique.txt",
+    "dandisets/000673/2025-04-15-gemini-2.0-flash-001-prompt-b-3/summary_critique.txt",
+    "dandisets/000673/2025-04-15-gpt-4o-prompt-a-3/cells_critique.json",
+    "dandisets/000673/2025-04-15-gpt-4o-prompt-a-3/cells_critique.txt",
+    "dandisets/000673/2025-04-15-gpt-4o-prompt-a-3/summary_critique.txt",
+    "dandisets/000673/2025-04-15-gpt-4o-prompt-b-3/cells_critique.json",
+    "dandisets/000673/2025-04-15-gpt-4o-prompt-b-3/cells_critique.txt",
+    "dandisets/000673/2025-04-15-gpt-4o-prompt-b-3/summary_critique.txt",
     "dandisets/000673/2025-04-16-claude-3.7-sonnet-prompt-a-4/cells_critique.json",
     "dandisets/000673/2025-04-16-claude-3.7-sonnet-prompt-a-4/cells_critique.txt",
     "dandisets/000673/2025-04-16-claude-3.7-sonnet-prompt-a-4/summary_critique.txt",
@@ -24,6 +42,18 @@
     "dandisets/000673/2025-04-16-gpt-4o-prompt-b-4/cells_critique.json",
     "dandisets/000673/2025-04-16-gpt-4o-prompt-b-4/cells_critique.txt",
     "dandisets/000673/2025-04-16-gpt-4o-prompt-b-4/summary_critique.txt",
+    "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.json",
+    "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.txt",
+    "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-a-3/summary_critique.txt",
+    "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-b-3/cells_critique.json",
+    "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-b-3/cells_critique.txt",
+    "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-b-3/summary_critique.txt",
+    "dandisets/000945/2025-04-15-gemini-2.0-flash-001-prompt-a-3/cells_critique.json",
+    "dandisets/000945/2025-04-15-gemini-2.0-flash-001-prompt-a-3/cells_critique.txt",
+    "dandisets/000945/2025-04-15-gemini-2.0-flash-001-prompt-a-3/summary_critique.txt",
+    "dandisets/000945/2025-04-15-gemini-2.0-flash-001-prompt-b-3/cells_critique.json",
+    "dandisets/000945/2025-04-15-gemini-2.0-flash-001-prompt-b-3/cells_critique.txt",
+    "dandisets/000945/2025-04-15-gemini-2.0-flash-001-prompt-b-3/summary_critique.txt",
     "dandisets/000945/2025-04-16-claude-3.7-sonnet-prompt-a-5/cells_critique.json",
     "dandisets/000945/2025-04-16-claude-3.7-sonnet-prompt-a-5/cells_critique.txt",
     "dandisets/000945/2025-04-16-claude-3.7-sonnet-prompt-a-5/summary_critique.txt",
@@ -36,12 +66,36 @@
     "dandisets/000945/2025-04-16-gemini-2.0-flash-001-prompt-b-4/cells_critique.json",
     "dandisets/000945/2025-04-16-gemini-2.0-flash-001-prompt-b-4/cells_critique.txt",
     "dandisets/000945/2025-04-16-gemini-2.0-flash-001-prompt-b-4/summary_critique.txt",
+    "dandisets/001174/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.json",
+    "dandisets/001174/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.txt",
+    "dandisets/001174/2025-04-15-claude-3.7-sonnet-prompt-a-3/summary_critique.txt",
+    "dandisets/001174/2025-04-15-claude-3.7-sonnet-prompt-b-3/cells_critique.json",
+    "dandisets/001174/2025-04-15-claude-3.7-sonnet-prompt-b-3/cells_critique.txt",
+    "dandisets/001174/2025-04-15-claude-3.7-sonnet-prompt-b-3/summary_critique.txt",
+    "dandisets/001174/2025-04-15-gemini-2.0-flash-001-prompt-a-3/cells_critique.json",
+    "dandisets/001174/2025-04-15-gemini-2.0-flash-001-prompt-a-3/cells_critique.txt",
+    "dandisets/001174/2025-04-15-gemini-2.0-flash-001-prompt-a-3/summary_critique.txt",
+    "dandisets/001174/2025-04-15-gemini-2.0-flash-001-prompt-b-3/cells_critique.json",
+    "dandisets/001174/2025-04-15-gemini-2.0-flash-001-prompt-b-3/cells_critique.txt",
+    "dandisets/001174/2025-04-15-gemini-2.0-flash-001-prompt-b-3/summary_critique.txt",
+    "dandisets/001174/2025-04-15-gpt-4o-prompt-a-3/cells_critique.json",
+    "dandisets/001174/2025-04-15-gpt-4o-prompt-a-3/cells_critique.txt",
+    "dandisets/001174/2025-04-15-gpt-4o-prompt-a-3/summary_critique.txt",
+    "dandisets/001174/2025-04-15-gpt-4o-prompt-b-3/cells_critique.json",
+    "dandisets/001174/2025-04-15-gpt-4o-prompt-b-3/cells_critique.txt",
+    "dandisets/001174/2025-04-15-gpt-4o-prompt-b-3/summary_critique.txt",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-a-5/cells_critique.json",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-a-5/cells_critique.txt",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-a-5/summary_critique.txt",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/cells_critique.json",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/cells_critique.txt",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/summary_critique.txt",
+    "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/cells_critique.json",
+    "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/cells_critique.txt",
+    "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/summary_critique.txt",
+    "dandisets/001335/2025-04-15-gpt-4o-prompt-b-3/cells_critique.json",
+    "dandisets/001335/2025-04-15-gpt-4o-prompt-b-3/cells_critique.txt",
+    "dandisets/001335/2025-04-15-gpt-4o-prompt-b-3/summary_critique.txt",
     "helpers/__pycache__/run_completion.cpython-312.pyc",
     "helpers/run_completion.py",
     "make_manifest.py",
@@ -49,5 +103,5 @@
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 48
+  "file_count": 102
 }
