--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -96,12 +96,21 @@
     "dandisets/001335/2025-04-15-gpt-4o-prompt-b-3/cells_critique.json",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-b-3/cells_critique.txt",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-b-3/summary_critique.txt",
-    "helpers/__pycache__/run_completion.cpython-312.pyc",
+    "dandisets/001335/2025-04-17-claude-3.7-sonnet-prompt-a-5/cells_critique.json",
+    "dandisets/001335/2025-04-17-claude-3.7-sonnet-prompt-a-5/cells_critique.txt",
+    "dandisets/001335/2025-04-17-claude-3.7-sonnet-prompt-a-5/summary_critique.txt",
+    "dandisets/001335/2025-04-17-claude-3.7-sonnet-prompt-b-5/cells_critique.json",
+    "dandisets/001335/2025-04-17-claude-3.7-sonnet-prompt-b-5/cells_critique.txt",
+    "dandisets/001335/2025-04-17-claude-3.7-sonnet-prompt-b-5/summary_critique.txt",
+    "dandisets/001335/2025-04-17-gemini-2.0-flash-001-prompt-b-5/cells_critique.json",
+    "dandisets/001335/2025-04-17-gemini-2.0-flash-001-prompt-b-5/cells_critique.txt",
+    "dandisets/001335/2025-04-17-gemini-2.0-flash-001-prompt-b-5/summary_critique.txt",
+    "helpers/__pycache__/run_completion.cpython-311.pyc",
     "helpers/run_completion.py",
     "make_manifest.py",
     "run_critiques.py",
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 102
+  "file_count": 111
 }
