--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -90,6 +90,21 @@
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/cells_critique.json",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/cells_critique.txt",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/summary_critique.txt",
+    "dandisets/001333/2025-04-17-claude-3.7-sonnet-prompt-b-5/cells_critique.json",
+    "dandisets/001333/2025-04-17-claude-3.7-sonnet-prompt-b-5/cells_critique.txt",
+    "dandisets/001333/2025-04-17-claude-3.7-sonnet-prompt-b-5/summary_critique.txt",
+    "dandisets/001333/2025-04-17-gemini-2.0-flash-001-prompt-a-5/cells_critique.json",
+    "dandisets/001333/2025-04-17-gemini-2.0-flash-001-prompt-a-5/cells_critique.txt",
+    "dandisets/001333/2025-04-17-gemini-2.0-flash-001-prompt-a-5/summary_critique.txt",
+    "dandisets/001333/2025-04-17-gemini-2.0-flash-001-prompt-b-5/cells_critique.json",
+    "dandisets/001333/2025-04-17-gemini-2.0-flash-001-prompt-b-5/cells_critique.txt",
+    "dandisets/001333/2025-04-17-gemini-2.0-flash-001-prompt-b-5/summary_critique.txt",
+    "dandisets/001333/2025-04-17-gpt-4o-prompt-a-5/cells_critique.json",
+    "dandisets/001333/2025-04-17-gpt-4o-prompt-a-5/cells_critique.txt",
+    "dandisets/001333/2025-04-17-gpt-4o-prompt-a-5/summary_critique.txt",
+    "dandisets/001333/2025-04-17-gpt-4o-prompt-b-5/cells_critique.json",
+    "dandisets/001333/2025-04-17-gpt-4o-prompt-b-5/cells_critique.txt",
+    "dandisets/001333/2025-04-17-gpt-4o-prompt-b-5/summary_critique.txt",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/cells_critique.json",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/cells_critique.txt",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/summary_critique.txt",
@@ -112,5 +127,5 @@
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 111
+  "file_count": 126
 }
