--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -90,6 +90,12 @@
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/cells_critique.json",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/cells_critique.txt",
     "dandisets/001174/2025-04-16-claude-3.7-sonnet-prompt-b-5/summary_critique.txt",
+    "dandisets/001174/2025-04-17-o4-mini-high-prompt-a-5/cells_critique.json",
+    "dandisets/001174/2025-04-17-o4-mini-high-prompt-a-5/cells_critique.txt",
+    "dandisets/001174/2025-04-17-o4-mini-high-prompt-a-5/summary_critique.txt",
+    "dandisets/001174/2025-04-17-o4-mini-high-prompt-b-5/cells_critique.json",
+    "dandisets/001174/2025-04-17-o4-mini-high-prompt-b-5/cells_critique.txt",
+    "dandisets/001174/2025-04-17-o4-mini-high-prompt-b-5/summary_critique.txt",
     "dandisets/001275/2025-04-17-claude-3.7-sonnet-prompt-a-5/cells_critique.json",
     "dandisets/001275/2025-04-17-claude-3.7-sonnet-prompt-a-5/cells_critique.txt",
     "dandisets/001275/2025-04-17-claude-3.7-sonnet-prompt-a-5/summary_critique.txt",
@@ -163,5 +169,5 @@
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 162
+  "file_count": 168
 }
