--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -159,6 +159,15 @@
     "dandisets/001333/2025-04-17-gpt-4o-prompt-b-5/cells_critique.json",
     "dandisets/001333/2025-04-17-gpt-4o-prompt-b-5/cells_critique.txt",
     "dandisets/001333/2025-04-17-gpt-4o-prompt-b-5/summary_critique.txt",
+    "dandisets/001333/2025-04-18-claude-3.7-sonnet-prompt-d-5/cells_critique.json",
+    "dandisets/001333/2025-04-18-claude-3.7-sonnet-prompt-d-5/cells_critique.txt",
+    "dandisets/001333/2025-04-18-claude-3.7-sonnet-prompt-d-5/summary_critique.txt",
+    "dandisets/001333/2025-04-18-gemini-2.0-flash-001-prompt-d-5/cells_critique.json",
+    "dandisets/001333/2025-04-18-gemini-2.0-flash-001-prompt-d-5/cells_critique.txt",
+    "dandisets/001333/2025-04-18-gemini-2.0-flash-001-prompt-d-5/summary_critique.txt",
+    "dandisets/001333/2025-04-18-gpt-4o-prompt-d-5/cells_critique.json",
+    "dandisets/001333/2025-04-18-gpt-4o-prompt-d-5/cells_critique.txt",
+    "dandisets/001333/2025-04-18-gpt-4o-prompt-d-5/summary_critique.txt",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/cells_critique.json",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/cells_critique.txt",
     "dandisets/001335/2025-04-15-gpt-4o-prompt-a-3/summary_critique.txt",
@@ -181,5 +190,5 @@
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 180
+  "file_count": 189
 }
