--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "packages/get-nwbfile-info"]
 	path = packages/get-nwbfile-info
 	url = https://github.com/rly/get-nwbfile-info
+[submodule "dandisets/001195"]
+	path = dandisets/001195
+	url = https://github.com/dandi-ai-notebooks/001195
