--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -108,18 +108,36 @@
     "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-a-6/cells_critique.json",
     "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-a-6/cells_critique.txt",
     "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-a-6/summary_critique.txt",
+    "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-b-6/cells_critique.json",
+    "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-b-6/cells_critique.txt",
+    "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-b-6/summary_critique.txt",
+    "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-d-6/cells_critique.json",
+    "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-d-6/cells_critique.txt",
+    "dandisets/001195/2025-04-18-claude-3.7-sonnet-prompt-d-6/summary_critique.txt",
     "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-a-5/cells_critique.json",
     "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-a-5/cells_critique.txt",
     "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-a-5/summary_critique.txt",
     "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-a-6/cells_critique.json",
     "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-a-6/cells_critique.txt",
     "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-a-6/summary_critique.txt",
+    "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-b-6/cells_critique.json",
+    "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-b-6/cells_critique.txt",
+    "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-b-6/summary_critique.txt",
+    "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-d-6/cells_critique.json",
+    "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-d-6/cells_critique.txt",
+    "dandisets/001195/2025-04-18-gemini-2.0-flash-001-prompt-d-6/summary_critique.txt",
     "dandisets/001195/2025-04-18-gpt-4o-prompt-a-5/cells_critique.json",
     "dandisets/001195/2025-04-18-gpt-4o-prompt-a-5/cells_critique.txt",
     "dandisets/001195/2025-04-18-gpt-4o-prompt-a-5/summary_critique.txt",
     "dandisets/001195/2025-04-18-gpt-4o-prompt-a-6/cells_critique.json",
     "dandisets/001195/2025-04-18-gpt-4o-prompt-a-6/cells_critique.txt",
     "dandisets/001195/2025-04-18-gpt-4o-prompt-a-6/summary_critique.txt",
+    "dandisets/001195/2025-04-18-gpt-4o-prompt-b-6/cells_critique.json",
+    "dandisets/001195/2025-04-18-gpt-4o-prompt-b-6/cells_critique.txt",
+    "dandisets/001195/2025-04-18-gpt-4o-prompt-b-6/summary_critique.txt",
+    "dandisets/001195/2025-04-18-gpt-4o-prompt-d-6/cells_critique.json",
+    "dandisets/001195/2025-04-18-gpt-4o-prompt-d-6/cells_critique.txt",
+    "dandisets/001195/2025-04-18-gpt-4o-prompt-d-6/summary_critique.txt",
     "dandisets/001275/2025-04-17-claude-3.7-sonnet-prompt-a-5/cells_critique.json",
     "dandisets/001275/2025-04-17-claude-3.7-sonnet-prompt-a-5/cells_critique.txt",
     "dandisets/001275/2025-04-17-claude-3.7-sonnet-prompt-a-5/summary_critique.txt",
@@ -229,5 +247,5 @@
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 228
+  "file_count": 246
 }
