--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -246,18 +246,27 @@
     "dandisets/001375/2025-04-18-claude-3.7-sonnet-prompt-b-6/cells_critique.json",
     "dandisets/001375/2025-04-18-claude-3.7-sonnet-prompt-b-6/cells_critique.txt",
     "dandisets/001375/2025-04-18-claude-3.7-sonnet-prompt-b-6/summary_critique.txt",
+    "dandisets/001375/2025-04-18-claude-3.7-sonnet-prompt-d-6/cells_critique.json",
+    "dandisets/001375/2025-04-18-claude-3.7-sonnet-prompt-d-6/cells_critique.txt",
+    "dandisets/001375/2025-04-18-claude-3.7-sonnet-prompt-d-6/summary_critique.txt",
     "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-a-6/cells_critique.json",
     "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-a-6/cells_critique.txt",
     "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-a-6/summary_critique.txt",
     "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-b-6/cells_critique.json",
     "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-b-6/cells_critique.txt",
     "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-b-6/summary_critique.txt",
+    "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-d-6/cells_critique.json",
+    "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-d-6/cells_critique.txt",
+    "dandisets/001375/2025-04-18-gemini-2.0-flash-001-prompt-d-6/summary_critique.txt",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-a-6/cells_critique.json",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-a-6/cells_critique.txt",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-a-6/summary_critique.txt",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-b-6/cells_critique.json",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-b-6/cells_critique.txt",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-b-6/summary_critique.txt",
+    "dandisets/001375/2025-04-18-gpt-4o-prompt-d-6/cells_critique.json",
+    "dandisets/001375/2025-04-18-gpt-4o-prompt-d-6/cells_critique.txt",
+    "dandisets/001375/2025-04-18-gpt-4o-prompt-d-6/summary_critique.txt",
     "helpers/__pycache__/run_completion.cpython-311.pyc",
     "helpers/run_completion.py",
     "make_manifest.py",
@@ -265,5 +274,5 @@
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 264
+  "file_count": 273
 }
