gradings and critiques

--- a/critiques/manifest.json
+++ b/critiques/manifest.json
@@ -42,6 +42,30 @@
     "dandisets/000673/2025-04-16-gpt-4o-prompt-b-4/cells_critique.json",
     "dandisets/000673/2025-04-16-gpt-4o-prompt-b-4/cells_critique.txt",
     "dandisets/000673/2025-04-16-gpt-4o-prompt-b-4/summary_critique.txt",
+    "dandisets/000690/2025-04-25-claude-3.7-sonnet-prompt-a-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-claude-3.7-sonnet-prompt-a-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-claude-3.7-sonnet-prompt-a-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-claude-3.7-sonnet-prompt-b-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-claude-3.7-sonnet-prompt-b-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-claude-3.7-sonnet-prompt-b-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-a-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-a-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-a-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-b-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-b-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-b-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-d-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-d-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-gemini-2.0-flash-001-prompt-d-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-a-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-a-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-a-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-b-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-b-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-b-7/summary_critique.txt",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-d-7/cells_critique.json",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-d-7/cells_critique.txt",
+    "dandisets/000690/2025-04-25-gpt-4o-prompt-d-7/summary_critique.txt",
     "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.json",
     "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-a-3/cells_critique.txt",
     "dandisets/000945/2025-04-15-claude-3.7-sonnet-prompt-a-3/summary_critique.txt",
@@ -267,12 +291,39 @@
     "dandisets/001375/2025-04-18-gpt-4o-prompt-d-6/cells_critique.json",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-d-6/cells_critique.txt",
     "dandisets/001375/2025-04-18-gpt-4o-prompt-d-6/summary_critique.txt",
-    "helpers/__pycache__/run_completion.cpython-311.pyc",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-a-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-a-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-a-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-b-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-b-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-b-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-d-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-d-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-claude-3.7-sonnet-prompt-d-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-a-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-a-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-a-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-b-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-b-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-b-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-d-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-d-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-gemini-2.0-flash-001-prompt-d-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-a-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-a-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-a-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-b-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-b-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-b-7/summary_critique.txt",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-d-7/cells_critique.json",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-d-7/cells_critique.txt",
+    "dandisets/001375/2025-04-25-gpt-4o-prompt-d-7/summary_critique.txt",
+    "helpers/__pycache__/run_completion.cpython-312.pyc",
     "helpers/run_completion.py",
     "make_manifest.py",
     "run_critiques.py",
     "templates/notebook_critic_cells_system_prompt.txt",
     "templates/notebook_critic_summary_system_prompt.txt"
   ],
-  "file_count": 273
+  "file_count": 324
 }
